--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       <div class="inner clearfix">
         <section id="main-content">
 <h3>
-<a href="weixin://?username=zhangyuchen&action=gotoaddFriend"> testweixin</a>
-
+<a href="weixin://?username=zhangyuchen&action=gotoaddFriend"> zhangyuchen</a>
+<a href="weixin://?username=475411112&action=gotoaddFriend"> 475411112</a>
+<a href="weixin://?username=289222983&action=gotoaddFriend"> 289222983</a>
+<a href="weixin://?username=jason_k_w&action=gotoaddFriend"> jason_k_w</a>
 <h3>
  </section>
 
