--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <a href="weixin://?username=289222983&action=gotoaddFriend"> 289222983</a>
 <a href="weixin://?username=jason_k_w&action=gotoaddFriend"> jason_k_w</a>
 <h3>
+<h3>
+<input type="text" id="searchKey" value=@"输入需要搜索的微信id/qq号码/手机号" onclick="javascript:void"></input>
  </section>
 
       </div>
