--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <h3>
 <a href="weixin://?username=jason_k_w&action=gotoaddFriend"> jason_k_w</a>
 <h3>
+<a href="weixin://?username=110&action=gotoaddFriend"> 110</a>
 </section>
 
       </div>
